<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/phone"
        android:layout_marginBottom="10dp"
        android:inputType="phone" />


    <CheckBox
        android:id="@+id/termeniCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/T_C"
        android:layout_marginBottom="10dp"
        ></CheckBox>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:onClick="getValuesOnClick"
        android:text="@string/submit"
        android:layout_marginBottom="10dp"
        ></Button>

</LinearLayout>